<resources>
    <string name="app_name">FiveTA</string>
    <string name="bottom_menu_personal">Personal</string>
    <string name="bottom_menu_group">Group</string>
    <string name="bottom_menu_favorites">Favorites</string>
    <string name="bottom_menu_friends">Friends</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="personal_create_a_new_eta">Create a new Personal ETA!</string>
    <string name="group_create_a_new_eta">Create a new Group ETA!</string>
    <string name="favorites_no_favorites">No favorites! add some favorites from either the Personal or Group sections.</string>
    <string name="title_activity_create_personal">CreatePersonalActivity</string>
    <string name="eta">ETA</string>
    <string name="personal_message_optional">Message(Optional):</string>
    <string name="personal_start">Start</string>

    <!-- Base Error Strings-->
    <string name="log_error_updating_data">Error updating data: </string>
    <string name="log_error_the_read_failed">The read failed: </string>
    <string name="log_error_occurred">"Error occurred: "</string>

    <string name="personal_new_eta_toolbar">new ETA</string>
    <string name="personal_eta_default_start_time">20</string>
    <string name="personal_create_min">min</string>
    <string name="snack_personal_create_failed">There was an error trying to create your ETA, Please try again.</string>
    <string name="snack_personal_need_a_friend">You need to select a friend</string>

    <string name="friends_add_toolbar">Add a friend from the list</string>

    <!--Content Descriptors -->
    <string name="cd_personal_photo_of_the_contact">Photo of the contact</string>
    <string name="cd_group_location_preview">Location preview</string>


    <!--Login-->
    <string name="facebook_label">Facebook</string>
    <string name="facebook_label_missing_config">Facebook - configuration missing</string>
    <string name="google_label">Google</string>
    <string name="google_label_missing_config">Google - configuration missing</string>
    <string name="google_tos_label">Google TOS</string>
    <string name="firebase_tos_label">Firebase TOS</string>
    <string name="tos_header">Terms of Service URL:</string>
    <string name="unknown_response">Unexpected onActivityResult response code 😐</string>
    <string name="ok_label">OK</string>
    <string name="unknown_sign_in_response">Unknown response from AuthUI sign-in 😓</string>
    <string name="sign_in_cancelled">Sign in cancelled 😔</string>
    <string name="signed_in_header">You are signed in!</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account_label">Delete account</string>
    <string name="sign_out_failed">Sign out failed 😨</string>
    <string name="delete_account_failed">Delete account failed 😨</string>
    <string name="user_profile_header">User profile:</string>
    <string name="profile_picture_content_desc">Profile picture</string>
    <string name="default_theme">Default theme</string>
    <string name="configuration_required">Configuration is required - see README.md</string>

    <string name="title_activity_create_group">CreateGroupActivity</string>
    <string name="group_create_time_desc">Time:</string>
    <string name="group_create_default_time">7:00PM</string>
    <string name="group_create_start">Create</string>
    <string name="title_activity_add_friend">AddFriendActivity</string>

    <!--Add friend-->
    <string name="error_cant_friend_yourself">You can\'t add yourself as a friend</string>
    <string name="snack_friend_added">Friend added</string>
    <string name="dialog_delete_eta">Do you want to delete this ETA?</string>
    <string name="dialog_no_image">It appears you don\'t have an image for your contact, please select one:</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no_image_confirm">Select Image</string>
    <string name="dialog_no">No</string>
    <string name="action_logout">log out</string>

</resources>
