<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.personal.CreatePersonalActivity"
    tools:showIn="@layout/activity_create_personal">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_personal_favorite_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:src="@drawable/ic_heart_empty_yellow_24dp"
        app:backgroundTint="@android:color/transparent"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:fabSize="normal"
        app:pressedTranslationZ="12dp"
        app:rippleColor="@color/yellow_500"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_personal_create_contact_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_person_add_white_24dp"
        android:layout_alignTop="@+id/fab_personal_favorite_add"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginStart="@dimen/fab_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/imageViewCreatePersonal"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/cd_personal_photo_of_the_contact"
            tools:background="#FFCCCCCC"/>

        <TextView
            android:id="@+id/textViewCreatePersonalName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            tools:text="Carlos Labrado"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|start"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/personal_message_optional"/>

        <EditText
            android:id="@+id/editTextPersonalMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            tools:text="I'll pick you up"/>

        <TextView
            android:id="@+id/textView4"
            style="@style/BigBlackText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/eta"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButtonMinutesUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_arrow_drop_up_accent_24dp"
                    />

                <TextView
                    android:id="@+id/textViewCreatePersonalETA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_eta_default_start_time"
                    android:textSize="36sp"/>

                <ImageButton
                    android:id="@+id/imageButtonMinutesDown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_arrow_drop_down_accent_24dp"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_create_min"
                android:textSize="@dimen/text_big_eta"/>
        </LinearLayout>

        <Button
            android:id="@+id/buttonCreatePersonalStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/personal_start"/>


    </LinearLayout>
</RelativeLayout>
