<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.group.CreateGroupActivity"
    tools:showIn="@layout/activity_create_group">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_group_favorite_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:src="@drawable/ic_heart_empty_yellow_24dp"
        app:backgroundTint="@android:color/transparent"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:fabSize="normal"
        app:pressedTranslationZ="12dp"
        app:rippleColor="@color/yellow_500"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/editTextGroupTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:singleLine="true"
            tools:text="D and D night"
            android:hint="Title of the event"/>

        <fragment
            android:id="@+id/mapLite"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            map:cameraZoom="13"
            map:liteMode="true"
            map:mapType="normal"
            tools:ignore="MissingPrefix"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group_create_time_desc"
                android:textSize="@dimen/text_big_eta"
                android:id="@+id/textView2"/>

            <TextView
                android:id="@+id/textViewCreateGroupTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group_create_default_time"
                android:textSize="@dimen/text_big_eta"/>
        </LinearLayout>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_group_create_contact_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_person_add_white_24dp"/>

        <Button
            android:id="@+id/buttonCreateGroupStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/group_create_start"/>


    </LinearLayout>
</RelativeLayout>
